--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,45 @@ _site/
 # counterproductive to check this file into the repository.
 # Details at https://github.com/github/pages-gem/issues/768
 Gemfile.lock
+# Node.js dependencies
+node_modules/
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+.log
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Build artifacts
+dist/
+build/
+public/build/ # For frameworks like Laravel Mix
+
+# Editor/OS specific files
+.DS_Store
+Thumbs.db
+.vscode/ # VS Code settings
+*.sublime-project
+*.sublime-workspace
+
+# Optional: Cache directories
+.npm/
+.yarn/cache/
+.eslintcache
+
+# Optional: Test coverage
+coverage/
+
+# Optional: Database files (if local)
+*.sqlite
+*.db
+
+# Optional: Temporary files
+tmp/
+*.tmp
